remnawave/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remnawave
  namespace: remnawave-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remnawave
  template:
    metadata:
      labels:
        app: remnawave
    spec:
      containers:
      - name: remnawave-backend
        image: remnawave/backend:latest
        ports:
        - name: http
          containerPort: 3000
