remnawave/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remnawave-redis
  namespace: remnawave-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remnawave-redis
  template:
    metadata:
      labels:
        app: remnawave-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: remnawave-redis
  namespace: remnawave-ns
spec:
  selector:
    app: remnawave-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
